hphp/test/zend/bad/ext/standard/tests/general_functions/get_cfg_var_variation8.php
<?php
ini_set('magic_quotes_gpc', 1);

echo "*** Test by calling method or function with deprecated option ***\n";
var_dump(get_cfg_var( 'magic_quotes_gpc' ) );

?>